CHANGELOG
=========

3.11.2 (in progress)
------------------
* [FIXED] #7189 Fix binding of selectfromgrouping langstring

3.11.1 (2022-02-09)
------------------
* [FEATURE] #7015 Allow creation of subgroups from groupings or other groups similar to core groups
* [FEATURE] #7040 Display activity completion on top of the landing page for students. Also an automatic completion
                  setting for registering to a given mount of groups was implemented
* [FEATURE] #7017 Show activity dates on top of the landing page like in moodle core activities
* [FEATURE] #7080 Add a link to the core group settings page in the administration overview
* [FIXED] #7056 Use enough zeros for padding when 10,100,1000,... groups are created

3.11.0 (2021-05-19)
------------------
* [FEATURE] #6855 Add support for showuseridentiy information to group and course view and their respective exports
* [FEATURE] #6951 Enable deregistration of users across moodle groups and other grouptool instances even if user is not
                  present in the given instance. "Force deregistration form grouptool" needs to be checked for this to work
* [FIXED] #6819 Fix wrong alphabetical allocation of group members occuring if groups cannot be filled up completely
* [FIXED] #6817 Fix students being enrolled to a course when using the import function when the operation is aborted
* [FIXED] #6858 Fix collapsing of columns in course view causing values to clip into the collapsed column
* [FIXED] #6949 Fix a warning appearing when attempting to copy grands in the "without conflicts" view

3.10.0 (2020-11-18)
------------------
* [FEATURE] #6774 Support for multilang format course names in export filenames [github pull #21 t-schroeder]

3.9.0 (2020-06-15)
------------------
* [FEATURE] #6009 Remove redundant individual group size setting. Now group sizes can be changed
                  without activating an additional setting