@@ -355,6 +355,8 @@ $string['inactive'] = 'Inactive';
 $string['inactivegroups'] = 'Inactive groups';
 $string['inactivegroups_hide'] = 'Hide inactive groups';
 $string['inactivegroups_show'] = 'Show inactive groups';
+$string['includeonlyactiveenrol'] = 'Include only active enrolments';
+$string['includeonlyactiveenrol_help'] = 'If enabled, suspended users will not be included in groups.';
 $string['incomplete_only_label'] = 'Show only groups with missing grades';
 $string['individual_size_info'] = '* Groupsize of grouptool settings';
 $string['intro'] = 'Description';
